# peakguard

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: db.py  main.py  utils.py
artifacts/: gru_energy_forecaster.keras  gru_energy_forecaster.weights.h5  series_minmax_scaler.pkl
artifacts/latest/: gru_energy_forecaster.keras  gru_energy_forecaster.weights.h5  series_minmax_scaler.pkl
data/: peakguard.db
experiments/: GRUTrainingPipeline.ipynb  H2OTrainingPipeline.ipynb  PeakGuard.ipynb
static/css/: styles.css
static/js/: app.js
templates/: index.html
